--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "4.17.1",
-    "mongoose": "4.13.21",
+    "mongoose": "^5.13.15",
     "node-restful": "0.2.6",
     "pm2": "4.5.5"
   },
